[tool.poetry]
name = "where_my_money"
version = "0.1.0"
description = ""
authors = ["Rene Hlavova <rene.hlavova@gmail.com>"]
license = "MIT"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "-v --cov=where_my_money --cov-report xml:cov.xml"

[tool.pyright]
ignore = "**/tests/"

[tool.poe.tasks]
isort = "isort where_my_money/"
isort-check = "isort --check where_my_money/"
black = "black where_my_money/"
black-check = "black --check where_my_money/"
mypy = "mypy --config-file mypy.ini where_my_money/"
pylint = "pylint where_my_money/"

format = ["isort", "black"]
lint = ["isort-check", "black-check", "pylint", "mypy"]
test = "pytest"
coverage = "coverage report"
tox = "tox"

build = "poetry build"
docker = "docker build -t bizztreat/where_my_money ."

run = "python -um where_my_money.main"

[tool.poetry.dependencies]
python = "^3.9,<=3.11"
tomli = "^2.0.1"
pydantic = "^1.10.6"
unidecode = "^1.3.6"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pylint = "^2.15.5"
mypy = "^0.991"
pytest = "^7.2.0"
poethepoet = "^0.16.4"
isort = "^5.10.1"
pytest-cov = "^4.0.0"
tox = "^3.27.1"
tox-poetry = "^0.4.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
